--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gurselcakardraft",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://gurselcakar.com",
+  "homepage": "http://gurselcakar.github.io/gurselcakardraft/",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
